src/App.css
@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.App {
	margin: 0 auto;
	max-width: 1080px;
	padding: 0 25px;
	color: white;
}

body {
	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
}

.cityList {
	display: flex;
	list-style-type: none;
	margin: 0;
	padding: 20px 0;
	overflow: hidden;
}

.cityList li {
	float: left;
}

.cityList li a {
	background-color: #ffffff00;
	color: white;
	display: block;
	font-size: large;
	font-weight: normal;
	padding: 8px;
	text-decoration: none;
}

.cityList li a:visited {
	color: white;
}

.cityList li a .Active {
	color: rgb(35, 0, 133);
	font-weight: bold;
}

.cityList li a:hover {
	background-color: #486ad842;
	border: none 1px;
	border-radius: 20px;
}

.Location {
	font-size: 45px;
	font-weight: bold;
	margin: 25px;
	padding-left: 10px;
	text-align: left;
	text-transform: capitalize;
}

.container {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	justify-content: space-around;
	align-items: auto;
	align-content: space-between;
}

.item {
	border: none 1px;
	border-radius: 30px;
	flex: 1 1 auto;
	margin: 20px;
	background: rgba(199, 199, 199, 0.15);
	backdrop-filter: blur(10px);
	padding: 30px;
	padding-top: 15px;
}

.item h2 {
	font-weight: normal;
	text-transform: uppercase;
}

.highlightedData {
	font-size: 50px;
}

.WeatherIcon {
	display: flex;
	align-items: center;
	font-size: 150px;
	justify-content: center;
	text-align: center;
	background: none;
}

